@@ -131,7 +131,7 @@ void qmidictlActionBar::resizeEvent ( QResizeEvent *event )
 void qmidictlActionBar::paintEvent ( QPaintEvent * )
 {
 	QStyleOption opt;
-	opt.init(this);
+	opt.initFrom(this);
 
 	QPainter painter(this);
 	style()->drawPrimitive(QStyle::PE_Widget, &opt, &painter, this);
