@@ -1,7 +1,7 @@
 // qmidictlUdpDevice.cpp
 //
 /****************************************************************************
-   Copyright (C) 2010-2019, rncbc aka Rui Nuno Capela. All rights reserved.
+   Copyright (C) 2010-2020, rncbc aka Rui Nuno Capela. All rights reserved.
 
    This program is free software; you can redistribute it and/or
    modify it under the terms of the GNU General Public License
@@ -25,6 +25,7 @@
 
 #include <QNetworkInterface>
 #include <QByteArray>
+#include <QVariant>
 
 #else
 
